fix bug preventing text from being visible while dark mode is enabled

--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -31,6 +31,9 @@ ul {
   list-style: none;
   padding-left:0;
 }
+h3, li {
+  color: #292f33;
+}
 .negativeMsg {
   color:#fff;
   background-color: #e62e00;
